manifests/policies/base/constraints/block-cross-namespace-service.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockCrossNamespaceService
metadata:
  name: block-cross-namespace-service
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    namespaces:
      - triage-hub-sandbox
      - triage-hub-staging
      - triage-hub-prod
