manifests/policies/base/constraints/block-loadbalancer.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLoadBalancer
metadata:
  name: block-loadbalancer
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    namespaces:
      - triage-hub-sandbox
      - triage-hub-staging
      - triage-hub-prod
