manifests/policies/base/constraints/block-privileged.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockPrivilegedContainer
metadata:
  name: block-privileged-containers
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["", "apps"]
        kinds: ["Pod", "Deployment"]
    excludedNamespaces:
      - kube-system
