manifests/policies/base/constraints/disallow-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: disallow-latest-tag
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - triage-hub-sandbox
      - triage-hub-staging
      - triage-hub-prod
  parameters:
    tags:
      - latest
