manifests/policies/base/constraints/require-container-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: require-container-limits
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    excludedNamespaces:
      - kube-system
      - argocd
      - gatekeeper-system
      - monitoring-*
  parameters:
    exemptImages:
      - "registry.k8s.io/"
